--- a/views/style.sass
+++ b/views/style.sass
@@ -1,5 +1,6 @@
 *
   color: #333
+
 nav ul
   margin: 0
   padding: 0
@@ -7,3 +8,13 @@ nav ul
     display: inline
     margin: 0
     padding: 0
+
+#editorMain
+  border:
+    style: solid
+    width: 1px
+  height: 500px
+  width: 80%
+
+h2, h2 *
+  font-size: 150%
